[package]
name = "smbus-snapin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
guid = "0.1.0"
intercom = "0.4.0"
log = "0.4"
simple-logging = "2.0"
windows = { version = "0.48.0", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging"
    ] }
winreg = "0.52"

[build_dependencies]
winres = "0.1"